Secure image and article controllers and implement jwt token generation