@@ -5,16 +5,20 @@ import io.micronaut.security.authentication.AuthenticationResponse;
 import io.micronaut.security.oauth2.endpoint.authorization.state.State;
 import io.micronaut.security.oauth2.endpoint.token.response.OauthAuthenticationMapper;
 import io.micronaut.security.oauth2.endpoint.token.response.TokenResponse;
+import io.micronaut.security.token.jwt.generator.JwtTokenGenerator;
+import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
 import sk.tuke.fei.kpi.dp.common.AuthProvider;
 import sk.tuke.fei.kpi.dp.dto.GitlabUserDto;
+import sk.tuke.fei.kpi.dp.dto.LoggedUserDto;
 import sk.tuke.fei.kpi.dp.model.entity.User;
+import sk.tuke.fei.kpi.dp.service.LoggedUserService;
 import sk.tuke.fei.kpi.dp.service.UserService;
 
 @Named("gitlab") // <1>
@@ -23,11 +27,17 @@ public class GitlabAuthenticationMapper implements OauthAuthenticationMapper {
 
   public static final String TOKEN_PREFIX = "Bearer ";
 
-  private final GitlabApiClient apiClient;
+  private final GitlabApiClient gitlabApiClient;
   private final UserService userService;
+  private final JwtTokenGenerator jwtTokenGenerator;
 
-  public GitlabAuthenticationMapper(GitlabApiClient apiClient, UserService userService) {
-    this.apiClient = apiClient;
+  @Inject
+  private LoggedUserService loggedUserService;
+
+  public GitlabAuthenticationMapper(GitlabApiClient gitlabApiClient, UserService userService,
+      JwtTokenGenerator jwtTokenGenerator) {
+    this.jwtTokenGenerator = jwtTokenGenerator;
+    this.gitlabApiClient = gitlabApiClient;
     this.userService = userService;
   }
 
@@ -36,7 +46,7 @@ public class GitlabAuthenticationMapper implements OauthAuthenticationMapper {
       @Nullable State state) {
     String gitlabAccessToken = TOKEN_PREFIX + tokenResponse.getAccessToken();
     System.out.println(gitlabAccessToken);
-    Publisher<GitlabUserDto> gitlabUser = apiClient.getUser(gitlabAccessToken);
+    Publisher<GitlabUserDto> gitlabUser = gitlabApiClient.getLoggedGitlabUser(gitlabAccessToken);
 
     return Flux.from(gitlabUser)
         .map(user -> {
@@ -47,13 +57,23 @@ public class GitlabAuthenticationMapper implements OauthAuthenticationMapper {
           if (loggedUser.getId() == null) {
             userService.saveUser(loggedUser);
           }
+          int currentTimeMillis = (int) (System.currentTimeMillis() / 1000L);
 
-          Map<String, Object> attributesMap = new HashMap<>();
-          attributesMap.put(ACCESS_TOKEN_KEY, gitlabAccessToken);
-          attributesMap.put(REFRESH_TOKEN_KEY, tokenResponse.getRefreshToken());
-          attributesMap.put(PROVIDER_KEY, AuthProvider.GITLAB);
-          return AuthenticationResponse.success(user.getUsername(),
-              Collections.singletonList("AUTHOR"), attributesMap);
+          Map<String, Object> claims = new HashMap<>();
+          claims.put("sub", user.getUsername());
+          claims.put("nbf", currentTimeMillis + (60 * 10));
+          claims.put("roles", List.of("AUTHOR"));
+          claims.put("iss", "redakcny-system-be");
+          claims.put("exp", currentTimeMillis + (60 * 180));
+          claims.put("iat", currentTimeMillis);
+          String jwtAccessToken = jwtTokenGenerator.generateToken(claims).orElse(null);
+
+          LoggedUserDto loggedUserDto = new LoggedUserDto(loggedUser.getId(),
+              loggedUser.getUsername(), loggedUser.getRole(), jwtAccessToken, AuthProvider.GITLAB);
+          loggedUserService.setLoggedUser(loggedUserDto);
+
+          return AuthenticationResponse.success(user.getUsername());
+
         });
   }
 }
